# pydepgraph

./: README.md  import_graph.py  pyproject.toml
depgraph/: __init__.py
pkg1/: a.py  c.py
pkg1/b/: __init__.py
test/: test_create_graph.py  test_flatten.py  test_get_modules.py  test_graph_operations.py
